# sadwinner

./: README.md
fw/esp32/: CMakeLists.txt  run-esp32.sh  sdkconfig  sdkconfig.old
fw/esp32/Src/: CMakeLists.txt
fw/esp32/Src/APP/: CMakeLists.txt
fw/esp32/Src/Hal/: CMakeLists.txt
fw/esp32/Src/User/: CMakeLists.txt  aaa.cpp  ccc.cpp  user_main.cpp
hw/PCB_Project_SadWinner/: PCB_Project_SadWinner.PrjPcb  esp32.SchDoc  sadwinner.PcbDoc
hw/PCB_Project_SadWinner/__Previews/: epaper.SchDocPreview  esp32.SchDocPreview  power.SchDocPreview
